# gh-pages-registry-demo

./: MODULE.bazel  README.md  REPO.bazel
.cargo/: config.toml
.github/workflows/: publish-registry.yml
greet/src/: lib.rs
hello/: BUILD.bazel  Cargo.toml
hello/src/: main.rs
