module(name = "gh-pages-registry-demo", version = "0.1.0")
bazel_dep(name = "rules_rust", version = "0.70.0")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_config = "//:.cargo/config.toml",
    cargo_lockfile = "//hello:Cargo.lock",
    manifests = ["//hello:Cargo.toml"],
)
use_repo(crate, "crates")
